# CDL-news-summaries

./: README.md  main.py  pyproject.toml
modules/: news_full_content_getter.py  news_getter.py  news_summarizer.py
